MAINTAINERCLEANFILES = Makefile.in

if ENABLE_ELM_MODULE
moduledir = $(ELEMENTARY_MODULE_DIR)
module_DATA = module.la module.so
module.la: Makefile $(LTLIBRARIES)
	cp $(srcdir)/.libs/$(lib_LTLIBRARIES) module.la
module.so: Makefile $(LTLIBRARIES)
	cp $(srcdir)/.libs/libeail.so module.so
endif

lib_LTLIBRARIES = libeail.la
libeailincludedir = $(includedir)/eail

libeail_la_SOURCES  = \
	eail.c \
	eail.h \
	eail_factory.c \
	eail_factory.h \
	eail_app.c \
	eail_app.h \
	eail_widget.c \
	eail_widget.h \
	eail_action_widget.c \
	eail_action_widget.h \
	eail_scrollable_widget.c \
	eail_scrollable_widget.h \
	eail_window.c \
	eail_window.h \
	eail_action_slider.c \
	eail_action_slider.h \
	eail_background.c \
	eail_background.h \
	eail_box.c \
	eail_box.h \
	eail_text.c \
	eail_text.h \
	eail_label.c \
	eail_label.h \
	eail_button.c \
	eail_button.h \
	eail_icon.c \
	eail_icon.h \
	eail_item.h \
	eail_item.c \
	eail_item_parent.h \
	eail_item_parent.c \
	eail_list.c \
	eail_list.h \
	eail_fileselector.c \
	eail_fileselector.h \
	eail_genlist.c \
	eail_genlist.h \
	eail_entry.c \
	eail_entry.h \
	eail_frame.c \
	eail_frame.h \
	eail_scroller.c \
	eail_scroller.h \
	eail_slider.c \
	eail_slider.h \
	eail_inwin.h \
	eail_inwin.c \
	eail_image.c \
	eail_image.h \
	eail_check.c \
	eail_check.h \
	eail_radio_button.c \
	eail_radio_button.h \
	eail_menu.c \
	eail_menu.h \
	eail_photo.c \
	eail_photo.h \
	eail_clock.c \
	eail_clock.h \
	eail_photocam.c \
	eail_photocam.h \
	eail_separator.c \
	eail_separator.h \
	eail_spinner.c \
	eail_spinner.h \
	eail_calendar.c \
	eail_calendar.h \
	eail_utils.c \
	eail_utils.h \
	eail_grid.c \
	eail_grid.h \
	eail_route.c \
	eail_route.h \
	eail_dayselector.c \
	eail_dayselector.h \
	eail_gengrid.c \
	eail_gengrid.h \
	eail_progressbar.c \
	eail_progressbar.h \
	eail_diskselector.c \
	eail_diskselector.h \
	eail_segment_control.c \
	eail_segment_control.h \
	eail_conformant.c \
	eail_conformant.h \
	eail_notify.c \
	eail_notify.h \
	eail_popup.c \
	eail_popup.h \
	eail_ctxpopup.c \
	eail_ctxpopup.h \
	eail_toolbar.c \
	eail_toolbar.h \
	eail_multibuttonentry.c \
	eail_multibuttonentry.h \
	eail_web.c \
	eail_web.h \
	eail_index.c \
	eail_index.h \
	eail_fileselector_entry.c \
	eail_fileselector_entry.h \
	eail_colorselector.c \
	eail_colorselector.h \
	eail_naviframe.c \
	eail_naviframe.h \
	eail_naviframe_page.c \
	eail_naviframe_page.h \
	eail_datetime.c \
	eail_datetime.h \
	eail_hover.c \
	eail_hover.h \
	eail_panes.c \
	eail_panes.h \
	eail_panel.c \
	eail_panel.h \
	eail_thumb.c \
	eail_thumb.h \
	eail_mapbuf.c \
	eail_mapbuf.h \
	eail_slideshow.c \
	eail_slideshow.h \
	eail_hoversel.c \
	eail_hoversel.h \
	eail_map.c \
	eail_map.h \
	eail_glview.c \
	eail_glview.h \
	eail_bubble.c \
	eail_bubble.h \
	eail_plug.c \
	eail_plug.h \
	eail_video.c \
	eail_video.h \
	eail_flip.c \
	eail_flip.h \
	eail_flipselector.c \
	eail_flipselector.h \
	eail_layout.c \
	eail_layout.h \
	eail_table.c \
	eail_table.h \
	eail_prefs.c \
	eail_prefs.h \
	eail_dynamic_content.c \
	eail_dynamic_content.h \
	eail_priv.h \
	eail_clipboard.c \
	eail_clipboard.h

libeailinclude_HEADERS = \
	eail.h \
	eail_factory.h \
	eail_app.h \
	eail_widget.h \
	eail_action_widget.h \
	eail_scrollable_widget.h \
	eail_window.h \
	eail_fileselector.h \
	eail_action_slider.h \
	eail_background.h \
	eail_box.h \
	eail_text.h \
	eail_label.h \
	eail_button.h \
	eail_icon.h \
	eail_item.h \
	eail_item_parent.h \
	eail_list.h \
	eail_genlist.h \
	eail_entry.h \
	eail_frame.h \
	eail_scroller.h \
	eail_slider.h \
	eail_inwin.h \
	eail_image.h \
	eail_check.h \
	eail_radio_button.h \
	eail_menu.h \
	eail_photocam.h \
	eail_photo.h \
	eail_clock.h \
	eail_separator.h \
	eail_spinner.h \
	eail_calendar.h \
	eail_utils.h \
	eail_grid.h \
	eail_route.h \
	eail_dayselector.h \
	eail_gengrid.h \
	eail_progressbar.h \
	eail_diskselector.h \
	eail_segment_control.h \
	eail_conformant.h \
	eail_notify.h \
	eail_popup.h \
	eail_ctxpopup.h \
	eail_toolbar.h \
	eail_multibuttonentry.h \
	eail_web.h \
	eail_index.h \
	eail_fileselector_entry.h \
	eail_colorselector.h \
	eail_naviframe.h \
	eail_naviframe_page.h \
	eail_datetime.h \
	eail_hover.h \
	eail_panes.h \
	eail_panel.h \
	eail_thumb.h \
	eail_mapbuf.h \
	eail_slideshow.h \
	eail_hoversel.h \
	eail_map.h \
	eail_glview.h \
	eail_bubble.h \
	eail_plug.h \
	eail_video.h \
	eail_flip.h \
	eail_flipselector.h \
	eail_layout.h \
	eail_table.h \
	eail_prefs.h \
	eail_dynamic_content.h \
	eail_priv.h \
	eail_clipboard.h

libeail_la_CFLAGS = @EAIL_CFLAGS@
libeail_la_LIBADD = @EAIL_LIBS@
libeail_la_LDFLAGS = \
	-no-undefined @LT_ENABLE_AUTO_IMPORT@ \
	-release @LT_RELEASE_VERSION@
